# ros-test

./: .gitignore
.devcontainer/: devcontainer.json
src/car_square/: CMakeLists.txt  package.xml
src/car_square/config/: robot_controller.yaml
src/car_square/launch/: clear.launch.py  display.launch.py  sim.launch.py  simu.launch.py
src/car_square/model/: model.xacro  model_simu.xacro
src/car_square/src/: odom_calculator.cpp
src/micro_ros_hardware/src/: micro_ros_hardware_interface.cpp
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/config/: robot_controller.yaml
src/robotic_arm/launch/: sim.launch.py
src/robotic_arm/model/: gazebo.xacro  model.xacro  parameters.xacro
src/robotic_arm/src/: arm_controller.cpp
src/robotic_arm_hardware/: CMakeLists.txt  package.xml  robotic_arm_hardware.xml
src/robotic_arm_hardware/include/robotic_arm_hardware/: arm_hardware_interface.hpp
src/robotic_arm_hardware/src/: arm_hardware_interface.cpp
src/ros2_control_car/: CMakeLists.txt  package.xml
src/ros2_control_car/config/: config.rviz  robot_controller.yaml
src/ros2_control_car/launch/: display.launch.py
src/ros2_control_car/model/: gazebo.xacro  model.xacro  parameters.xacro
src/ros2_control_car/model/wheels/: omni_wheel.urdf.xacro
src/ros2_control_car/src/: arm_controller.cpp  lidar_controller.cpp
src/ros2_control_tuto/: CMakeLists.txt  package.xml
src/ros2_control_tuto/config/: robot_controller.yaml
src/ros2_control_tuto/launch/: display.launch.py
src/ros2_control_tuto/model/: gazebo.xacro  model.xacro  parameters.xacro
src/simple_sim_robot/: CMakeLists.txt  package.xml
src/simple_sim_robot/launch/: sim.launch.py
src/simple_sim_robot/src/: lidar_ranges_node.cpp  simple_controller.cpp
src/simple_sim_robot/urdf/: robot.urdf
src/simple_sim_robot/world/: world_demo.sdf
