<?xml version="1.0"?>
<package format="3">
  <name>robotic_arm_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface for robotic arm</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <hardware_interface plugin="${prefix}/robotic_arm_hardware.xml"/>
  </export>
</package>
